1-Deploy_legacy_app/cloudsdk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudsdk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudsdk      
  template:
    metadata:
      labels:
        app: cloudsdk        
    spec:
      serviceAccountName: cloudsdk
      containers:
      - image: docker.io/google/cloud-sdk:latest
        imagePullPolicy: IfNotPresent
        name: cloudsdk
        command:
        - sleep
        - infinity
