1-Deploy_legacy_app/tcp-echo.yaml
# Copyright 2018 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

################################################################################
# tcp-echo service
################################################################################
# apiVersion: v1
# kind: Service
# metadata:
#   name: tcp-echo
#   labels:
#     app: tcp-echo
#     service: tcp-echo
# #  annotations:
# #    cloud.google.com/l4-rbs: "enabled"
# #    cloud.google.com/neg: '{"exposed_ports": {"9000":{"name": "tcp"}}}'
# spec:
#   type: LoadBalancer
#   externalTrafficPolicy: Cluster
#   ports:
#   - name: tcp
#     port: 9000
#     protocol: TCP
#   selector:
#     app: tcp-echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-echo
      version: v1
  template:
    metadata:
      labels:
        app: tcp-echo
        version: v1
    spec:
      containers:
      - name: tcp-echo
        image: docker.io/istio/tcp-echo-server:1.2
        imagePullPolicy: IfNotPresent
        args: [ "9000,9001,9002", "hello" ]
        ports:
        - containerPort: 9000
        - containerPort: 9001
